# silver-invention

2019/Algo-Trading-master/: README.md  run_script_main.py
2019/Algo-Trading-master/dat/: README.md  (+8 more)
2019/Camera-Motion-Sensor-master/: motion_detection.py
2019/LinkedIn-Network-Project-master/: README.txt  a.out  connection.cpp  connection.h  contact.cpp  contact.h  date.cpp  date.h  misc.cpp  misc.h  network.cpp  network.h  sample_network.db  student_network.db  test_all.cpp
2019/Project_C_Embedded_Systems_final_project_Rangefinder/: Makefile  README.txt  adc.c  lcd.c  main.elf  main.hex  rangefinder.c  ranging.c  ranging.h  serial.c  serial.h
2019/Project_Python_IOT_Server/: README.txt  flask_server.py  http_client_example.py  signal_processing.py  ultrasonic_ranger_publisher.py
C++/dictionaryAttack/: CMakeLists.txt
C++/dictionaryAttack/cmake/: FindTBB.cmake
C++/dictionaryAttack/input/: nouns.txt  pass-phrasessmall.txt
C++/dictionaryAttack/src/: CMakeLists.txt  SrcMain.h
C++/runLengthEncoding/: CMakeLists.txt  Main.cpp
DNA Sequencing and Pairwise Alignment/: CMakeLists.txt  README.md
DNA Sequencing and Pairwise Alignment/sampleoutput/: A1C1_amino.txt  Mus_musculus_c19_amino.txt  TAS2R16_amino.txt  Zaire_amino.txt
DNA Sequencing and Pairwise Alignment/src/: CMakeLists.txt  DnaPairwiseAlignment.hpp  DnaTranslator.hpp  Parser.hpp  SrcMain.cpp  SrcMain.h
REST server/: CMakeLists.txt  CMakeSettings.json  README.md  run-clang-tidy.py
REST server/postman/: pa7-tests.postman_collection.json
REST server/src/: CMakeLists.txt  Makefile  SrcMain.cpp  SrcMain.h  cmake_install.cmake  imdb.cpp  imdb.h  imdbparser.cpp  imdbparser.h
VM Compiler/: .clang-tidy  CMakeLists.txt  Main.cpp  README.md
VM Compiler/expected/: fibonacci.ast.txt  fibonacci.emit.txt  fibonacci.reg.emit.txt  fibonacci.reg.txt  star.ast.txt  star.emit.txt  star.reg.emit.txt  star.reg.txt  test01.ast.txt  test02.ast.txt  test02.emit.txt  test02.reg.emit.txt  test02.reg.txt  test03.ast.txt  test03.emit.txt  test03.reg.emit.txt  test03.reg.txt  test04.ast.txt  test04.emit.txt  test04.reg.emit.txt  test04.reg.txt  test05.ast.txt  test05.emit.txt  test05.reg.emit.txt  test05.reg.txt  test06.ast.txt  test06.emit.txt  test06.reg.emit.txt  test06.reg.txt
VM Compiler/input/: fibonacci.pcc  star.pcc  test01.pcc  test02.pcc  test03.pcc  test04.pcc  test05.pcc  test06.pcc
VM Compiler/src/: CMakeLists.txt  Node.cpp  Node.h  NodeCodeGen.cpp  NodeOutput.cpp  Procc.l  Procc.y  SrcMain.cpp  SrcMain.h
Virtual Machine Drawing Application/: .clang-tidy  CMakeLists.txt  README.md
Virtual Machine Drawing Application/expected/: basic01-log.txt  basic02-log.txt  basic03-log.txt  basic04-log.txt  draw01-log.txt  draw02-log.txt  draw03-log.txt  draw04-log.txt  excep01-log.txt  excep02-log.txt  excep04-log.txt  excep05-log.txt  excep06-log.txt  excep07-log.txt  excep08-log.txt  excep09-log.txt  fibonacci-log.txt  fibonacci-stack.txt  stack01-log.txt  stack01-stack.txt
Virtual Machine Drawing Application/input/: basic02.psm  basic03.psm  basic04.psm  draw01.psm  draw02.psm  draw03.psm  draw04.psm  excep01.psm  excep02.psm  excep03.psm  excep04.psm  excep05.psm  excep06.psm  excep07.psm  excep08.psm  excep09.psm  fibonacci.psm  stack01.psm
Virtual Machine Drawing Application/src/: CMakeLists.txt  Exceptions.h  Machine.cpp  Machine.h  Ops.cpp  Ops.h  Parser.hpp  SrcMain.cpp  SrcMain.h
dictionaryAttack/: CMakeLists.txt  Main.cpp  README.md
dictionaryAttack/input/: nouns-small.txt  pass-basicdict.txt  pass-nounsdict.txt  pass-phrasesbig.txt
dictionaryAttack/src/: HashTable.hpp  SrcMain.cpp  sha1.cpp  sha1.h
geneticAlgorithm/: .clang-tidy  CMakeLists.txt  README.md
geneticAlgorithm/input/: locations2.txt
geneticAlgorithm/src/: CMakeLists.txt  SrcMain.cpp  TSP.cpp
geneticAlgorithm/tests/: CMakeCache.txt  CMakeLists.txt  Catch.cpp  GradedTests.cpp  Makefile  StudentTests.cpp  cmake_install.cmake  md5.h
runLengthEncoding/: README.md
runLengthEncoding/data/: instructions.txt.rl1
runLengthEncoding/src/: CMakeLists.txt  RleData.h  RleFile.cpp  RleFile.h
(+128 files in other folders)
